test/arrays/sungeun/invalid_reindex2.good
invalid_reindex2.chpl:7: error: halt reached - extent in dimension 3 does not match actual
